[gd_scene load_steps=15 format=3 uid="uid://f0mr8jxcda01"]

[ext_resource type="Script" path="res://Scripts/UI/register.gd" id="1_pkeda"]
[ext_resource type="Texture2D" uid="uid://hqkduoyy3y6l" path="res://Imports/WorldMap/map.png" id="1_rx7o5"]

[sub_resource type="Theme" id="Theme_f0ndk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_utodr"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikp07"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8enwq"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ave18"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtijo"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_05l4r"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lduq7"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6k062"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i0tjr"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b2xxu"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wk6xh"]
bg_color = Color(0.988235, 0, 0.278431, 1)

[node name="Register" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pkeda")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -1911.0
offset_top = -1247.0
offset_right = 2689.0
offset_bottom = 1500.0
color = Color(0.572549, 0.662745, 0.807843, 1)

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 959.0
offset_bottom = 539.0
texture = ExtResource("1_rx7o5")

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 0
offset_left = 288.0
offset_top = 73.0
offset_right = 666.0
offset_bottom = 538.0

[node name="PlayerID" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Player Name
"

[node name="PlayerID_Field" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2

[node name="password" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
text = "Password"

[node name="PasswordField" type="LineEdit" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
secret = true

[node name="Register" type="Button" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_f0ndk")
theme_override_colors/icon_normal_color = Color(0, 0, 0, 1)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/icon_disabled_color = Color(0, 0, 0, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_utodr")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_ikp07")
theme_override_styles/disabled = SubResource("StyleBoxFlat_8enwq")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_ave18")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_gtijo")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_05l4r")
theme_override_styles/hover = SubResource("StyleBoxFlat_lduq7")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_6k062")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i0tjr")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_b2xxu")
theme_override_styles/normal = SubResource("StyleBoxFlat_wk6xh")
text = "Create Account
"

[node name="HTTPRequest" type="HTTPRequest" parent="NinePatchRect/VBoxContainer/Register"]

[node name="Login" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 284.0
offset_top = 338.0
offset_right = 356.0
offset_bottom = 369.0
text = "Login
"

[node name="WorldMap" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 573.0
offset_top = 338.0
offset_right = 666.0
offset_bottom = 369.0
text = "World Map
"

[node name="Camera2D" type="Camera2D" parent="NinePatchRect"]
position = Vector2(479, 270)

[node name="ErrorLbl" type="Label" parent="."]
offset_left = 288.0
offset_top = 246.0
offset_right = 328.0
offset_bottom = 269.0

[connection signal="pressed" from="NinePatchRect/VBoxContainer/Register" to="." method="_on_register_pressed"]
[connection signal="request_completed" from="NinePatchRect/VBoxContainer/Register/HTTPRequest" to="." method="_on_http_request_request_completed"]
[connection signal="pressed" from="NinePatchRect/Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="NinePatchRect/WorldMap" to="." method="_on_world_map_pressed"]
